# VKE

./: .README.md.un~  README.md
VulkanEngine/: CLAUDE.md  CMakeLists.txt  README.md
VulkanEngine/shaders/: sprite.vert
VulkanEngine/src/: Engine.h  main.cpp
VulkanEngine/src/core/: Application.cpp  Application.h  Base.h  Input.h  Window.cpp  Window.h
VulkanEngine/src/ecs/: Components.h  Entity.h  Scene.cpp  Scene.h  ScriptableEntity.h
VulkanEngine/src/editor/: EditorLayer.cpp  EditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h
VulkanEngine/src/render/: Renderer2D.cpp  Renderer2D.h  Vertex.h
VulkanEngine/src/vk/: Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VulkanContext.cpp  VulkanContext.h
VulkanEngine3D/: .AIdata.un~  .run.sh.un~  AIdata  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini  run.sh  setup.sh
VulkanEngine3D/assets/shaders/: basic.frag  basic.vert  checker.frag  matcap.frag  normal.frag  rim.frag  toon.frag  toon.vert
VulkanEngine3D/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
VulkanEngine3D/build-debug/assets/shaders/: rim.frag.spv  toon.frag.spv
VulkanEngine3D/build-debug/assets/shaders/backrooms/: ceiling.frag.spv  wall.frag.spv
VulkanEngine3D/build-debug/projects/backrooms/: Makefile  cmake_install.cmake
VulkanEngine3D/build-debug/projects/sandbox/: Makefile  cmake_install.cmake
VulkanEngine3D/cmake/: VkeProject.cmake
VulkanEngine3D/docs/: Scripting.md
VulkanEngine3D/editor/: CMakeLists.txt
VulkanEngine3D/editor/src/: EditorApp.cpp  EditorApp.hpp  FileDialog.cpp  FileDialog.hpp  Project.cpp  Project.hpp  main.cpp
VulkanEngine3D/editor/templates/: Rotator.cpp  gitignore  main.scene  project.json
VulkanEngine3D/engine/include/vke/: .Script.hpp.swp  Application.hpp  Components.hpp  Core.hpp  EditorGUI.hpp  Entity.hpp  Keys.hpp  Mesh.hpp  Renderer3D.hpp  Scene.hpp  SceneSerializer.hpp  Script.hpp  ScriptHost.hpp  Window.hpp  vke.hpp
VulkanEngine3D/engine/include/vke/vulkan/: Context.hpp  Pipeline.hpp  PostProcess.hpp  Swapchain.hpp
VulkanEngine3D/engine/src/core/: Application.cpp  Core.cpp  Window.cpp
VulkanEngine3D/engine/src/editor/: EditorGUI.cpp
VulkanEngine3D/engine/src/render/: Renderer3D.cpp
VulkanEngine3D/engine/src/scene/: Mesh.cpp
VulkanEngine3D/engine/src/script/: Script.cpp  ScriptHost.cpp
VulkanEngine3D/engine/src/serial/: SceneSerializer.cpp
VulkanEngine3D/engine/src/vulkan/: Context.cpp  Pipeline.cpp  PostProcess.cpp  Swapchain.cpp
VulkanEngine3D/projects/First_game/: project.json
VulkanEngine3D/projects/First_game/scenes/: main.scene
VulkanEngine3D/projects/First_game/scripts/: .KeyboardMover.cpp.un~  .Rotator.cpp.swp  KeyboardMover.cpp
VulkanEngine3D/projects/backrooms/: CMakeLists.txt  README.md
VulkanEngine3D/projects/backrooms/assets/models/captain_clark_baked/: catch_00.glb  catch_01.glb  catch_02.glb  catch_03.glb  catch_04.glb  catch_05.glb  run_00.glb  run_01.glb  run_02.glb  run_03.glb  run_04.glb  run_05.glb  run_06.glb  run_07.glb  walk_00.glb  walk_01.glb  walk_02.glb  walk_03.glb  walk_04.glb  walk_05.glb  walk_06.glb  walk_07.glb
VulkanEngine3D/projects/backrooms/shaders/: carpet.frag  ceiling.frag  vhs.frag  vhs.vert  wall.frag
VulkanEngine3D/projects/backrooms/src/: .CaptainClark.hpp.un~  .main.cpp.un~  Audio.cpp  Audio.hpp  AudioSystem.cpp  AudioSystem.hpp  CaptainClark.hpp  LevelGen.hpp  main.cpp
VulkanEngine3D/projects/backrooms/tools/: bake_captain_clark.py
VulkanEngine3D/projects/sandbox/: CMakeLists.txt
VulkanEngine3D/projects/sandbox/src/: main.cpp
